--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/lusca": "^1.7.5",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
@@ -120,7 +121,6 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "typescript-eslint": "^8.18.2",
     "vite": "^5.4.19"
   },
   "optionalDependencies": {
